# ConsoleGamesLib

./: .gitignore  CMakeLists.txt  License Notice.md  Makefile  README.md  gamelib  main.c  strcap.c  tictactoe.c
.github/ISSUE_TEMPLATE/: bug_report.md
games/: battleships  battleships.c  hangman.c  tictactoe.c
libs/: CGLgeneral.c  CGLgeneral.h  colors.h  strcap.c  strcap.h
